# acceleration

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  mise.toml
.github/workflows/: ci.yml  pypi.yml  release.yml  wheels.yml
acceleration/: Cargo.toml
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/src/: xex2.cpp
bindings/python/tests/: test_smoke.py
cli/: Cargo.toml
cli/src/: main.rs
crates/cli/src/: main.rs
crates/lzxc/: Cargo.toml  README.md
crates/lzxc/src/: bitstream.rs  lib.rs  verbatim.rs
crates/stfs/src/: hash.rs  hashing.rs  io.rs  serde_hex.rs
crates/stfs/src/wrappers/: mod.rs
crates/stfs/tests/: parse_fixtures.rs
crates/stfs/tests/snapshots/: parse_fixtures__live_120k_a__walk_files.snap  parse_fixtures__live_120k_b__header.snap  parse_fixtures__live_256k__file_table.snap  parse_fixtures__live_256k__header.snap  parse_fixtures__live_532k__file_table.snap  parse_fixtures__live_532k__header.snap
crates/ui/docs/: acceleration_ui.js  index.html  manifest.json  sw.js
crates/ui/src/: app.rs  lib.rs
crates/xcontent/: Cargo.toml
crates/xcontent/src/: lib.rs
crates/xcontent/tests/: parse_xcontent.rs
crates/xcontent/tests/snapshots/: parse_xcontent__con_a__header_snapshot.snap  parse_xcontent__con_b__header_snapshot.snap  parse_xcontent__live_large__metadata_snapshot.snap  parse_xcontent__live_small_a__header_snapshot.snap  parse_xcontent__live_small_b__header_snapshot.snap  parse_xcontent__live_small_b__metadata_snapshot.snap
crates/xecrypt/tests/: parse_keyvault.rs
crates/xecrypt/tests/snapshots/: parse_keyvault__kv_09__snapshot.snap
crates/xenon_types/: Cargo.toml  README.md
crates/xenon_types/src/: serde_hex.rs
crates/xex2/: Cargo.toml
crates/xex2-ffi/: Cargo.toml
crates/xex2-ffi/src/: inner.rs  lib.rs
crates/xex2/src/: basefile.rs  builder.rs  header.rs  imports.rs  lib.rs  writer.rs
crates/xex2/tests/: parse_xex.rs
crates/xex2ool/: Cargo.toml  README.md
crates/xex2ool/src/: idc.rs  kernel_exports.rs  main.rs  xml.rs
doc/: STFS.md
lzxc/: Cargo.toml  README.md
lzxc/benches/: compression.rs
lzxc/examples/: profile_compress.rs
lzxc/src/: huffman.rs  lib.rs  match_finder.rs  pretree.rs  verbatim.rs
src/: cli.rs  lib.rs  stfs.rs
stfs/: Cargo.toml  README.md  out.rs
stfs/src/: consts.rs  error.rs  file_table.rs  fs.rs  hash.rs  hashing.rs  header.rs  io.rs  lib.rs  package.rs  parse.rs  serde_bytes.rs  serde_hex.rs  sparse_reader.rs  stfs.rs  stfs_vfs.rs  types.rs  util.rs  vfs.rs
stfs/src/wrappers/: bytes.rs
stfs/tests/: parse_fixtures.rs
stfs/tests/fixtures/: live_120k_a.stfs  live_120k_b.stfs  live_256k.stfs  live_532k.stfs
stfs/tests/snapshots/: parse_fixtures__live_120k_a__file_table.snap  parse_fixtures__live_120k_a__header.snap  parse_fixtures__live_120k_a__header.snap.new  parse_fixtures__live_120k_b__file_table.snap  parse_fixtures__live_120k_b__header.snap  parse_fixtures__live_120k_b__header.snap.new  parse_fixtures__live_120k_b__walk_files.snap  parse_fixtures__live_256k__header.snap  parse_fixtures__live_256k__header.snap.new  parse_fixtures__live_256k__walk_files.snap  parse_fixtures__live_532k__header.snap  parse_fixtures__live_532k__header.snap.new  parse_fixtures__live_532k__walk_files.snap
stfs_old/: Cargo.toml
stfs_old/src/: lib.rs  stfs.rs
ui/: Cargo.toml  build_web.sh
ui/docs/: acceleration_ui.js  index.html  sw.js
ui/src/: app.rs  lib.rs  main.rs
xcontent/: Cargo.toml  README.md
xcontent/src/: error.rs  lib.rs  parse.rs  util.rs
xcontent/tests/: parse_xcontent.rs
xcontent/tests/snapshots/: parse_xcontent__con_a__header_snapshot.snap  parse_xcontent__con_a__metadata_snapshot.snap  parse_xcontent__con_b__header_snapshot.snap  parse_xcontent__con_b__metadata_snapshot.snap  parse_xcontent__live_large__header_snapshot.snap  parse_xcontent__live_large__metadata_snapshot.snap  parse_xcontent__live_small_a__header_snapshot.snap  parse_xcontent__live_small_a__metadata_snapshot.snap  parse_xcontent__live_small_b__header_snapshot.snap  parse_xcontent__live_small_b__metadata_snapshot.snap
xecrypt/: Cargo.toml  README.md
xecrypt/src/: keys.rs  keyvault.rs  lib.rs  symmetric.rs
xecrypt/tests/: parse_keyvault.rs
xecrypt/tests/snapshots/: parse_keyvault__kv_01__snapshot.snap  parse_keyvault__kv_02__snapshot.snap  parse_keyvault__kv_04__snapshot.snap
xenon_types/: Cargo.toml
xenon_types/src/: lib.rs  serde_hex.rs
xex2/: Cargo.toml  README.md
xex2/src/: assemble.rs  basefile.rs  builder.rs  compress.rs  crypto.rs  error.rs  hashes.rs  header.rs  idc.rs  imports.rs  kernel_exports.rs  lib.rs  opt.rs  page_descriptors.rs  patch.rs  rebuild.rs  writer.rs  xml.rs
xex2/tests/: parse_xex.rs
xex2ool/: Cargo.toml  README.md
xex2ool/src/: kernel_exports.rs  main.rs  xml.rs
