[workspace]
resolver = "2"
members = ['cli', 'stfs', 'stfs_old', 'ui', "xcontent", "xecrypt", "xex2", "xex2ool", "xenon_types"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
byteorder = "1.5"
num_enum = "0.7"
bitflags = "2.11"
sha-1 = "0.10.1"
vfs = "0.13"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
insta = { version = "1", features = ["toml"] }
fskit = { version = "0.2", features = ["vfs"] }
