[workspace]
resolver = "2"
members = ['cli', 'lzxc', 'stfs', 'ui', "xcontent", "xecrypt", "xex2", "xex2ool", "xenon_types"]

[workspace.package]
# Shared version for all workspace crates *except* `lzxc`, which is
# released independently so its version drifts on its own cadence.
version = "0.2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
byteorder = "1.5"
num_enum = "0.7"
bitflags = "2.11"
sha-1 = "0.10.1"
vfs = "0.13"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
insta = { version = "1", features = ["toml"] }
fskit = { version = "0.2", features = ["vfs"] }
jiff = "0.2"
