[package]
name = "acceleration_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "acceleration"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0" }
stfs = { version = "0.1", path = "../stfs" }
xcontent = { path = "../xcontent" }
chrono = "0.4.38"
hex = "0.4.3"
humansize = "2.1.3"
serde_json = "1.0"
