[package]
name = "acceleration_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acceleration"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
stfs = { path = "../stfs" }
xcontent = { path = "../xcontent" }
chrono = "0.4.38"
hex = "0.4.3"
humansize = "2.1.3"
serde_json = "1.0"
vfs = { workspace = true }
