[package]
name = "acceleration_cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "acceleration"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
stfs = { version = "0.1", path = "../stfs" }
xcontent = { version = "0.1", path = "../xcontent" }
chrono = "0.4.44"
hex = "0.4.3"
humansize = "2.1.3"
serde_json = "1.0"
vfs = { workspace = true }
