[package]
name = "stfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
vfs = ["dep:fskit", "dep:vfs"]
async-vfs = ["vfs", "fskit/async-vfs", "dep:async-trait", "dep:futures"]

[dependencies]
sha-1 = "0.10.0"
thiserror = "1.0"
bitflags = "1.3"
byteorder = "1.4"
num_enum = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
fskit = { version = "0.2", path = "../../fskit", features = ["vfs"], optional = true }
vfs = { version = "0.13", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
