[package]
name = "stfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
base64-serde = ["dep:base64"]
vfs = ["dep:fskit", "dep:vfs"]
async-vfs = ["vfs", "fskit/async-vfs", "dep:async-trait", "dep:futures"]

[dependencies]
sha-1 = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true, optional = true }
fskit = { workspace = true, optional = true }
vfs = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
