[package]
name = "stfs_old"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha-1 = "0.10.1"
#rsa = "0.5.0"
thiserror = "2.0"
bitflags = "2.11"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
byteorder = "1.5"
num_enum = { version = "0.7" }
serde = { version = "1.0", features = ["derive", "rc"] }
parking_lot = { version = "0.12", features = ["serde"] }
