[package]
name = "acceleration_ui"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18"
eframe = { version = "0.18", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
stfs = { version = "0.1", path = "../stfs" }
rfd = "0.8"
ouroboros = "0.15"
image = { version = "0.24", features = ["jpeg", "png"] }
egui_extras = { version = "0.18", features = ["image"] }
log = "0.4"
clipboard = "0.5"
wasm-bindgen-futures = "0.4"
futures = "0.3"
zip = "0.6"
parking_lot = "0.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
