[package]
name = "acceleration_ui"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.27"
eframe = { version = "0.27", features = ["persistence"] }
serde = { workspace = true }
stfs = { version = "0.1", path = "../stfs" }
xcontent = { version = "0.1", path = "../xcontent" }
rfd = "0.14"
image = { version = "0.25", features = ["jpeg", "png"], default-features = false }
egui_extras = { version = "0.27", features = ["image"] }
log = "0.4"
clipboard = "0.5"
wasm-bindgen-futures = "0.4"
futures = { workspace = true }
zip = { version = "1.1", default-features = false, features = ["deflate"] }
parking_lot = "0.12"
anyhow = { workspace = true }
vfs = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
gloo-file = "0.2"
web-sys = "0.3"
