[package]
name = "xcontent"
version = "0.1.0"
edition = "2021"

[dependencies]
sha-1 = { workspace = true }
vfs = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
stfs = { path = "../stfs", features = ["vfs"] }
xecrypt = { path = "../xecrypt", features = ["serde"] }
