[package]
name = "xcontent"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/landaire/acceleration"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
readme = "README.md"
description = "Parser for Xbox 360 XContent packages (CON, LIVE, PIRS)"
keywords = ["xbox360", "xcontent", "xbox", "parser"]
categories = ["parser-implementations"]

[dependencies]
sha-1 = { workspace = true }
vfs = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
stfs = { version = "0.1", path = "../stfs", features = ["vfs"] }
xecrypt = { version = "0.1", path = "../xecrypt", features = ["serde"] }
xenon_types = { version = "0.1", path = "../xenon_types" }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
serde_json = "1.0"
xenon_types = { version = "0.1", path = "../xenon_types" }
