[package]
name = "xecrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9.6", features = ["sha1"] }
sha1 = { version = "0.10.6", features = ["oid"] }
serde = { workspace = true, optional = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[features]
serde = ["dep:serde"]
