[package]
name = "xecrypt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/landaire/acceleration"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
readme = "README.md"
description = "Xbox 360 cryptographic primitives (AES, SHA-1, RSA signature verification)"
keywords = ["xbox360", "crypto", "aes", "rsa"]
categories = ["cryptography"]

[dependencies]
rsa = { version = "0.9.10", features = ["sha1"] }
sha1 = { version = "0.11", features = ["oid"] }
aes = "0.9"
cbc = "0.2"
serde = { workspace = true, optional = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
xenon_types = { version = "0.1", path = "../xenon_types" }

[dev-dependencies]
insta = { workspace = true }

[features]
serde = ["dep:serde"]
