[package]
name = "xex2"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
sha-1 = { workspace = true }
num_enum = { workspace = true }
lzxd = "0.2"
rootcause = "0.12"
xecrypt = { path = "../xecrypt" }

[dev-dependencies]
insta = { workspace = true }
