[package]
name = "xex2ool"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Lander Brandt"]
description = "Command-line tool for inspecting and modifying Xbox 360 XEX2 executables"
repository = "https://github.com/landaire/acceleration"
readme = "README.md"
keywords = ["xbox360", "xex", "xbox", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "xex2ool"
path = "src/main.rs"

[dependencies]
xex2 = { version = "0.1", path = "../xex2", features = ["serde"] }
xenon_types = { version = "0.1", path = "../xenon_types", features = ["jiff"] }
bitflags = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde_json = "1.0"
tabled = "0.20"
rootcause = { version = "0.12", features = ["compat-anyhow1"] }
