[project]
name = "xex2"
version = "0.2.0"
description = "Python bindings for the xex2 crate: parse, inspect, and patch Xbox 360 XEX2 executables."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Lander Brandt", email = "landerbrandt@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: System :: Emulators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage   = "https://github.com/landaire/acceleration"
Repository = "https://github.com/landaire/acceleration"
Issues     = "https://github.com/landaire/acceleration/issues"

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"
wheel.packages = []
# Ship the workspace licenses alongside the wheel so PyPI's
# license-scanning tooling sees them. Paths are relative to pyproject.
wheel.license-files = ["../../LICENSE-APACHE", "../../LICENSE-MIT"]

# ──────────────────────────────────────────────────────────────────────────
# cibuildwheel driven by `.github/workflows/wheels.yml` (the Stage 2 jobs).
# The Rust static lib + diplomat-generated C++ headers are produced by the
# Stage 1 `rust-build` job and dropped into the workspace before this runs,
# so no Rust toolchain is needed inside cibuildwheel's containers.
# ──────────────────────────────────────────────────────────────────────────
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip: musl builds, 32-bit Linux, win32, PyPy. Keep the matrix to the
# places we actually support.
skip = "*-musllinux_* *_i686 *-win32 pp*"
build-verbosity = 1
# Smoke-import the module after each wheel install to catch link / missing-
# symbol issues at build time rather than on a user's machine.
test-command = 'python -c "import xex2; print(xex2.__file__)"'

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"

[tool.cibuildwheel.macos]
# Single universal2 wheel per Python version covers both arm64 and
# x86_64. Requires the static Rust archive to be a universal (fat)
# library — the wheels.yml `rust-build` step does the cross-compile
# + `lipo -create` to produce it.
archs = ["universal2"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
